--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: KrawieckiKarol
 github_username:  meyday7
+google_analytics: G-M8D32Q7NFP
 
 # Build settings
 remote_theme: "mmistakes/jekyll-theme-basically-basic"
