--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: KrawieckiKarol
 github_username:  meyday7
 google_analytics: G-M8D32Q7NFP
+search: true
 
 # Build settings
 remote_theme: "mmistakes/jekyll-theme-basically-basic"
