--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: pro-xchange.me@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Blog from students about exchange between KEDGE BS and KU Leuven!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://pro-xchange.me" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: proxchange.me
 facebook_username: Pro-xchange-104604118384268
 google_analytics: G-M8D32Q7NFP
