--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Pro-xChange
-email: pro-xchange.me@gmail.com
+email: team@pro-xchange.me
 description: >- # this means to ignore newlines until "baseurl:"
   Blog from students about exchange between KEDGE BS and KU Leuven!
 baseurl: "" # the subpath of your site, e.g. /blog
