--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ logo: /assets/images/logo.png
 # Build settings
 remote_theme: "mmistakes/jekyll-theme-basically-basic"
 plugins:
-
+  - jekyll-seo-tag
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
