--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ logo: /assets/images/logo.png
 remote_theme: "mmistakes/jekyll-theme-basically-basic"
 plugins:
   - jekyll-seo-tag
+  - jekyll-sitemap
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
